adding stub for java sql Connection